# sqlite-wrapper

./: .clang-format  .gitignore  CMakeLists.txt  README  clang-format.cmd  config.hpp.in  cxx_flag_overrides.cmake  index.html  sqlite3.c.in  sqlite3.h.in  sqlite3ext.h.in  template.manifest  version.hpp.in  win_cmake.cmd.in
cmake_modules/: FindSQLITE3.cmake
doc/: Doxyfile.in  doxygen.css  footer.html  header.html  sqlite-wrapper.hpp
doc/html/: annotated.html  classdb_1_1base-members.html  classdb_1_1base.html  classdb_1_1del-members.html  classdb_1_1del.html  classdb_1_1detail_1_1a2w-members.html  classdb_1_1detail_1_1a2w.html  classdb_1_1detail_1_1w2a-members.html  classdb_1_1detail_1_1w2a.html  classdb_1_1expr_1_1base-members.html  classdb_1_1expr_1_1base.html  classdb_1_1expr_1_1eq-members.html  classdb_1_1expr_1_1eq.html  classdb_1_1expr_1_1gt-members.html  classdb_1_1expr_1_1gt.html  classdb_1_1expr_1_1gt__eq-members.html  classdb_1_1expr_1_1gt__eq.html  classdb_1_1expr_1_1in-members.html  classdb_1_1expr_1_1in.html  classdb_1_1expr_1_1like-members.html  classdb_1_1expr_1_1like.html  classdb_1_1expr_1_1lt-members.html  classdb_1_1expr_1_1lt.html  classdb_1_1expr_1_1lt__eq-members.html  classdb_1_1expr_1_1lt__eq.html  classdb_1_1expr_1_1oper-members.html  classdb_1_1expr_1_1oper.html  classdb_1_1field-members.html  classdb_1_1field.html  classdb_1_1ins-members.html  classdb_1_1ins.html  classdb_1_1log_1_1base-members.html  classdb_1_1log_1_1base.html  classdb_1_1log_1_1buffer_1_1basic-members.html  classdb_1_1log_1_1buffer_1_1basic.html  classdb_1_1log_1_1buffer_1_1database-members.html  classdb_1_1log_1_1buffer_1_1database.html  classdb_1_1log_1_1buffer_1_1file-members.html  classdb_1_1log_1_1buffer_1_1file.html  classdb_1_1log_1_1format_1_1basic-members.html  (+44 more)
html/: a2w_8hpp.html  a2w_8hpp_source.html  annotated.html  classdb_1_1base-members.html  classdb_1_1base.html  classdb_1_1del-members.html  classdb_1_1del.html  classdb_1_1detail_1_1a2w-members.html  classdb_1_1detail_1_1a2w.html  classdb_1_1detail_1_1w2a-members.html  classdb_1_1detail_1_1w2a.html  classdb_1_1exception_1_1base-members.html  classdb_1_1exception_1_1base.html  classdb_1_1exception_1_1db__error-members.html  classdb_1_1exception_1_1db__error.html  classdb_1_1exception_1_1insertion__error-members.html  classdb_1_1exception_1_1insertion__error.html  classdb_1_1exception_1_1internal__error-members.html  classdb_1_1exception_1_1internal__error.html  classdb_1_1exception_1_1memory__error-members.html  classdb_1_1exception_1_1memory__error.html  classdb_1_1exception_1_1not__found-members.html  classdb_1_1exception_1_1not__found.html  classdb_1_1exception_1_1param__error-members.html  classdb_1_1exception_1_1param__error.html  classdb_1_1exception_1_1sql__error-members.html  classdb_1_1exception_1_1sql__error.html  classdb_1_1exception_1_1unknown__error-members.html  classdb_1_1exception_1_1unknown__error.html  classdb_1_1expr_1_1base-members.html  classdb_1_1expr_1_1base.html  classdb_1_1expr_1_1eq-members.html  classdb_1_1expr_1_1eq.html  classdb_1_1expr_1_1gt-members.html  classdb_1_1expr_1_1gt.html  classdb_1_1expr_1_1gt__eq-members.html  classdb_1_1expr_1_1gt__eq.html  classdb_1_1expr_1_1in-members.html  classdb_1_1expr_1_1in.html  classdb_1_1expr_1_1like-members.html  (+109 more)
include/sqlite-wrapper/: config.hpp  db.h
include/sqlite_wrapper/: a2w.hpp  config.hpp  cout.hpp  db.hpp  log.hpp  private_assemblies.hpp  table.hpp  w2a.hpp
include/sqlite_wrapper/detail/: del.hpp  exception.hpp  expr.hpp  field.hpp  ins.hpp  param.hpp  query.hpp  row.hpp  sel.hpp  serialize.hpp  time.hpp  tools.hpp  upd.hpp
include/sqlite_wrapper/impl/: a2w.ipp  cout.ipp  db.ipp  del.ipp  exception.ipp  expr.ipp  field.ipp  ins.ipp  log_level.ipp  param.ipp  query.ipp  row.ipp  sel.ipp  split.ipp  table.ipp  time.ipp  upd.ipp  w2a.ipp
include/sqlite_wrapper/sqlite/: sqlite3.h
src/: CMakeLists.txt  a2w.cpp  cout.cpp  db.cpp  del.cpp  exception.cpp  expr.cpp  field.cpp  ins.cpp  log_level.cpp  param.cpp  query.cpp  row.cpp  sel.cpp  split.cpp  table.cpp  upd.cpp  w2a.cpp
src/clr/: CMakeLists.txt  wrapper.cpp
src/shared/: CMakeLists.txt  a2w.cpp  cout.cpp  db.cpp  del.cpp  exception.cpp  expr.cpp  field.cpp  ins.cpp  log_level.cpp  param.cpp  query.cpp  row.cpp  sel.cpp  split.cpp  table.cpp  time.cpp  upd.cpp  w2a.cpp
src/sqlite/: sqlite3.c
src/static/: CMakeLists.txt
test/: CMakeLists.txt  db.cpp  db_log.cpp  db_log_viewer.cpp  db_log_viewer.hpp  log.cpp
