MACRO(MAKE_SQLITE_WRAPPER_LIBRARY TARGETNAME VARIANT ALLFILES)
	ADD_DEFINITIONS(-DSQLITE_WRAPPER_USE=1)
	
	ADD_LIBRARY (${TARGETNAME} ${VARIANT} ${ALLFILES})
	
	SET_TARGET_PROPERTIES(${TARGETNAME} PROPERTIES VS_GLOBAL_KEYWORD "ManagedCProj" LINK_FLAGS "/MANIFEST:NO")
	SET_TARGET_PROPERTIES(${TARGETNAME} PROPERTIES COMPILE_FLAGS "/clr")
	SET_TARGET_PROPERTIES(${TARGETNAME} PROPERTIES VS_DOTNET_REFERENCES "System;System.Core;System.Data;System.Xml;WindowsBase")



	SOURCE_GROUP( "Source Files" FILES ${ALLFILES})

	#SET_TARGET_PROPERTIES(${TARGETNAME} PROPERTIES VERSION ${SQLITE_WRAPPER_VERSION})

	SET_TARGET_PROPERTIES(
#		${TARGETNAME} PROPERTIES OUTPUT_NAME sqlite_wrapper
		${TARGETNAME} PROPERTIES OUTPUT_NAME_RELEASE ${TARGETNAME}
		${TARGETNAME} PROPERTIES OUTPUT_NAME_DEBUG ${TARGETNAME}_debug
		${TARGETNAME} PROPERTIES OUTPUT_NAME_RELEASESTATIC ${TARGETNAME}_st
		${TARGETNAME} PROPERTIES OUTPUT_NAME_DEBUGSTATIC ${TARGETNAME}_st_debug
		${TARGETNAME} PROPERTIES OUTPUT_NAME_MINSIZEREL ${TARGETNAME}_minsizerel
		${TARGETNAME} PROPERTIES OUTPUT_NAME_RELWITHDEBINFO ${TARGETNAME}_relwithdebinfo
		LINK_FLAGS "/MANIFEST:NO"
	)
	
	IF (NOT MSVC)
		TARGET_LINK_LIBRARIES (
			${TARGETNAME}
			${Boost_LIBRARIES}
			dl
		)
	ELSE()
		TARGET_LINK_LIBRARIES(${TARGETNAME} sqlite_wrapper)
	ENDIF ()

	IF(SQLITE_WRAPPER_HAVE_CLOCK_GETTIME)
		TARGET_LINK_LIBRARIES(${TARGETNAME} rt)
	ENDIF()

	INSTALL (TARGETS ${TARGETNAME} DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
ENDMACRO()

MAKE_SQLITE_WRAPPER_LIBRARY(sqlite_clr_wrapper SHARED ${CMAKE_SOURCE_DIR}/src/clr/wrapper.cpp)
