MACRO(MAKE_SQLITE_WRAPPER_LIBRARY TARGETNAME VARIANT)
	ADD_DEFINITIONS(-DSQLITE_WRAPPER_SHARED)
	ADD_LIBRARY (${TARGETNAME} ${VARIANT} ${sqlite_wrapper_files} ${SQLITE_WRAPPER_INCLUDE_DIR}/private_assemblies.hpp)

	#SET_TARGET_PROPERTIES(${TARGETNAME} PROPERTIES VERSION ${SQLITE_WRAPPER_VERSION})

	#IF(${TARGETNAME} STREQUAL sqlite_wrapper)
	#	SET_TARGET_PROPERTIES(
	#		${TARGETNAME} PROPERTIES SOVERSION ${SQLITE_WRAPPER_SHARED_VERSION}
	#	)
	#ENDIF()

	IF (NOT MSVC)
		TARGET_LINK_LIBRARIES (
			${TARGETNAME}
			${Boost_LIBRARIES}
		)
	ENDIF ()

	IF(SQLITE_WRAPPER_HAVE_CLOCK_GETTIME)
		TARGET_LINK_LIBRARIES(${TARGETNAME} rt)
	ENDIF()

	INSTALL (TARGETS ${TARGETNAME} DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
ENDMACRO()

MAKE_SQLITE_WRAPPER_LIBRARY(sqlite_wrapper SHARED)
